# xxx-scrapper

./: .gitignore  LICENSE  data.json  main.py  olx_data.json  pyproject.toml  shafa_all.json  shafa_top.json
.github/: CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  GOVERNANCE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md
.github/DISCUSSION_TEMPLATE/: general.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
src/clients/: __init__.py  product.py
src/clients/api/: __init__.py  olx.py  shafa.py
src/enums/: olx.py  shafa.py
src/services/: __init__.py  olx.py  product.py  shafa.py
src/utils/: logger.py  service.py
src/utils/client/: __init__.py  client.py  html.py  http.py  json.py
